2002-04-19  Andreas Jaeger  <aj@suse.de>

	* Makefile.in (c-call-graph.o): New.

2002-04-18  Sebastian Pop  <s.pop@laposte.net>

	* c-pretty-print.c (PRINT_FUNCTION_NAME): Define.
	(dump_c_node): Call pretty_print_string to print string.
	Call print_call_name to print function names.
	(pretty_print_string): New function.
	(print_call_name): New function.

2002-04-17  Diego Novillo  <dnovillo@redhat.com>

	* c-simplify.c (simplify_do_stmt): Call is_simple_condexpr to test
	if the conditional is in SIMPLE form.
	(simplify_if_stmt): Ditto.

2002-04-17  Diego Novillo  <dnovillo@redhat.com>

	* c-pretty-print.c (dump_c_node): Handle escape sequences in strings.
	(op_symbol): Handle TRUTH_NOT_EXPR.
	* c-simplify.c: Rename 'after' with 'post' and 'before' with 'pre'
	everywhere.
	Re-group some functions and add comments.
	(simplify_stmt): Update calls to simplify_for_stmt,
	simplify_while_stmt, simplify_do_stmt and simplify_switch_stmt.
	Call simplify_if_stmt.
	Do not test if expression is in SIMPLE form before calling
	simplify_expr.
	Call convert_to_stmt_chain to emit statement trees for side effects
	found while simplifying.
	(simplify_for_stmt): Re-implement.  Do not change structure of the
	statement.  Simplify each header expression and emit side effects
	at sequence points.
	(simplify_while_stmt): Ditto.
	(simplify_do_stmt): Ditto.
	(simplify_switch_stmt): Ditto.
	(new_simplified_if): Rename to simplify_if_stmt.
	Call simplify_expr to simplify the conditional.
	(simplify_if_stmt): New name for new_simplified_if.
	(simplify_expr): Do not default simple_test_f to is_simple_expr.
	If simple_test_f is not set, abort.
	Handle COMPOUND_EXPR, MODIFY_EXPR, TRUTH_ANDIF_EXPR,
	TRUTH_ORIF_EXPR, SAVE_EXPR and EXPR_WITH_FILE_LOCATION.
	(simplify_arglist): Rename to simplify_tree_list.
	(simplify_tree_list): New name for simplify_arglist.
	(simplify_boolean_expr): New function.
	(simplify_compound_expr): New function.